# NoiseEGRA

./: .env.example  .gitignore  AceGPT.py  Allam.py  EGRA_functions.py  Fanar.py  Jais.py  Qween.py  README.md  READme.md  RMS_std.py  __init__.py  build_final_scores_markdown.py  creativity_metrics.py  egra_constraint_checker.py  extract_parts_vendi.py  gen_results_aceGPT.py  get_viol_qual_scores.py  main_eg.py  metrics_first30.py  prompts.py  pyproject.toml  requirements.txt  setup_experiment.py
examples/: main_eg.py
noiseegra/: EGRA_functions.py  __init__.py  creativity_metrics.py  defaults.py  prompts.py  setup_experiment.py
noiseegra/data/: paper_modal_collapse_indices.json
noiseegra/models/: AceGPT.py  Allam.py  Fanar.py  Jais.py  Qween.py  __init__.py
paper/source/: acl_latex.tex  custom.bib
scripts/: build_final_scores_markdown.py  collect_run_results.py  extract_parts_vendi.py  final_scores.py  judge_common.py  metrics_first30.py  per_story_scores.py  score_stories_gpt52.py  scoring_common.py  split_combined_results.py
scripts/oneoff/: gen_results_aceGPT.py  get_viol_qual_scores.py
